@@ -12,8 +12,11 @@
 # -Wformat -Werror=format-security will need many fixes to avoid ftbfs,
 # so it's disabled for now
 export DEB_BUILD_MAINT_OPTIONS = hardening=-format,+bindnow
+# disable optimization for SETI
+export DEB_CFLAGS_MAINT_STRIP = -O2
+export DEB_CXXFLAGS_MAINT_STRIP = -O2
 DPKG_EXPORT_BUILDFLAGS = 1
-#include /usr/share/dpkg/buildflags.mk
+include /usr/share/dpkg/buildflags.mk
 
 DEB_HOST_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
